<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutAddUrlContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/imgAddUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:src="@drawable/ic_web_link"
        app:tint="@color/white"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/add_url_semi_caps"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/imgAddUrl"
        app:layout_constraintStart_toEndOf="@id/imgAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgAddUrl"/>

    <EditText
        android:id="@+id/edtInputUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@null"
        android:hint="@string/enter_url"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_vertical"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint_color"
        android:inputType="textUri"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/imgAddUrl"/>

    <TextView
        android:id="@+id/txtAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/color_accent_alt"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/edtInputUrl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/color_accent_alt"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/edtInputUrl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtAddButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>