<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMisc"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_misc"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/txtMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/miscellaneous"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"/>

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewCol1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/note_color_background_1"/>

            <ImageView
                android:id="@+id/imgCol1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewCol2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/note_color_background_2"/>

            <ImageView
                android:id="@+id/imgCol2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewCol3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/note_color_background_3"/>

            <ImageView
                android:id="@+id/imgCol3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewCol4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/note_color_background_4"/>

            <ImageView
                android:id="@+id/imgCol4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewCol5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/note_color_background_5"/>

            <ImageView
                android:id="@+id/imgCol5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewCol6"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/note_color_background_6"/>

            <ImageView
                android:id="@+id/imgCol6"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/white"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/icons_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/add_image"
            android:textColor="@color/icons_color"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_12ssp"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_web_link"
            app:tint="@color/icons_color"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/add_url"
            android:textColor="@color/icons_color"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_12ssp"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_delete"
            app:tint="@color/delete_button_color"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/delete_note"
            android:textColor="@color/delete_button_color"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>


</LinearLayout>